@@ -119,6 +119,7 @@ function CheckForUpdate(showdialog) {
 			var urights=data.statuscode;
 			var bDisplayLogout=false;
 			$.FiveMinuteHistoryDays=data["5MinuteHistoryDays"];
+			$.AllowWidgetOrdering=data["AllowWidgetOrdering"];
 			if (urights!=3) {
 				bDisplayLogout=true;
 			}
